--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,8 @@
 body {
+  display: block;
+  margin: 0 auto;
   background-color: blanchedalmond;
+  max-width: 700px;
 }
 h1,
 p {
@@ -12,4 +15,8 @@ p {
 }
 .links {
   padding: 20px;
+}
+img {
+  display: block;
+  margin: 0 auto;
 }
